Fixed image overflowing while previewing image in QueueFound and QueueMystery

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -391,6 +391,8 @@ body {
     }
 
     .preview-container {
+      background-position: center;
+      background-size: cover;
       position: relative;
       display: flex;
       justify-content: center;
